--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     
     <p class="css">hello world</p>
+    <script></script>
     <script src="./index.css"></script>
+    <script src="./App.js"></script>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 </body>
 </html>
