--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>namaste react</title>
-</head>
+    <link rel="stylesheet" href="./index.css">
+</head>  
 <body>
-    
+    <div id="root">hii iam sushil</div>
     <p class="css">hello world</p>
     <script></script>
-    <script src="./index.css"></script>
-    <script src="./App.js"></script>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+   
+   
+<script type="module" src="./App.js"></script>
 </body>
 </html>
