learn components and jsx

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="./index.css">
 </head>  
 <body>
-    <div id="root">hii iam sushil</div>
-    <p class="css">hello world</p>
-    <script></script>
+    <div id="root"></div>
+   <h1>Hioo! sushil is here</h1>
    
    
 <script type="module" src="./App.js"></script>
